# whoami

./: .dockerignore  Cargo.toml  Containerfile  README.md  docker-bake.hcl  package.json
.github/workflows/: build-image.yml  test.yml
assets/: style.css
src/: config.rs  error.rs  lib.rs  main.rs  router.rs  tracing.rs  utils.rs
templates/: home.html
tests/: routes.rs
