[package]
name = "whoiam"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
askama = "0.14.0"
axum = { version = "0.8.7", features = ["macros"] }
axum-client-ip = "1.1.3"
config = "0.15.19"
indexmap = { version = "2.12.1", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
static-serve = "0.4.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = [
  "env-filter",
  "fmt",
  "json",
  "registry",
] }
