[package]
name = "whoami"
version = "0.0.5"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1.0.100"
askama = "0.14.0"
axum = { version = "0.8.7", features = ["macros"] }
axum-client-ip = "1.1.3"
built = { version = "0.8.0", features = ["semver", "git2"] }
config = "0.15.19"
indexmap = { version = "2.12.1", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
static-serve = "0.4.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = [
  "env-filter",
  "fmt",
  "json",
  "registry",
] }

[profile.release]
opt-level = 3
codegen-units = 1
strip = true
lto = true
panic = "abort"

[dev-dependencies]
http-body-util = "0.1.3"

[build-dependencies]
built = { version = "0.8.0", features = ["semver", "git2"] }
